--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <span class="casa">Buses Hualpen,<br> 
                             Empresa Transporte Privado</span>
                         <span class="fecha">2023-2024</span>
-                        <p>Liderazgo de proyectos de kilometraje ligados principalmente a la eficiencia operacional y financiera. </p>
+                        <p>Liderazgo de proyectos de kilometraje ligados al desarrollo de herramientas de análisis de datos y BI en áreas de eficiencia operacional y financiera. </p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
