--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -16,12 +16,7 @@
             </div>
             <nav id="nav">
                 <ul>
-                    <li><a href="index.html#inicio">INICIO</a></li>
-                    <li><a href="index.html#sobremi">SOBRE MI</a></li>
-                    <li><a href="index.html#skills">SKILLS</a></li>
-                    <li><a href="index.html#curriculum">CURRICULUM</a></li>
-                    <li><a href="index.html#portfolio">PORTFOLIO</a></li>
-                    <li><a href="index.html#contacto">CONTACTO</a></li>
+                    <li><a href="../index.html#portfolio">VOLVER</a></li>
                 </ul>
             </nav>
             <div class="nav-responsive" onclick="mostrarOcultarMenu()">
@@ -30,27 +25,53 @@
         </header>
     </div>
 
-    <!-- Contenido de Experiencia Profesional -->
-    <section class="detalle">
-        <div class="contenido-seccion">
-            <h2>Experiencia Profesional</h2>
-            <p>Detalles sobre mi experiencia profesional...</p>
-            <!-- Agrega aquí más contenido sobre tus proyectos profesionales -->
+<!-- SECCION CURRICULUM -->
+<section id="curriculum" class="curriculum">
+    <div class="contenido-seccion">
+        <h2>Experiencia profesional en empresa de transporte privado de buses</h2>
+        <div class="fila">
+            <div class="col izquierda">
+                <h3>Caso estudio</h3>
+                <div class="item izq">
+                    <h4>Problema</h4>
+                    <ul style="list-style-type: disc; margin-left: 20px; font-size: 0.9em;">
+                        <li>Falta de un sistema <span style="color: #1CB698">centralizado</span>, <span style="color: #1CB698">automatizado</span> y <span style="color: #1CB698">confiable</span> de registro de kilometraje en Buses Hualpén.</li>
+                    </ul>
+                    <div class="conectori">
+                        <div class="circuloi"></div>
+                    </div>
+                </div>
+                <div class="item izq">
+                    <h4>Impacto</h4>
+                    <ul style="list-style-type: disc; margin-left: 20px; font-size: 0.9em;">
+                        <li><span style="color: #1CB698">Pérdida de control</span> y trazabilidad de la flota.</li>
+                        <li><span style="color: #1CB698">Costeo de contratos</span> para los clientes afectado.</li>
+                        <li><span style="color: #1CB698">Pérdida en la eficiencia operativa</span> y mayores costos.</li>
+                        <li>Dificultad en la toma de decisiones informadas y eficiencia del combustible <span style="color: #1CB698">afectada</span>.</li>
+                        <li>Problemas de cumplimiento normativo con posibles sanciones y multas.</li>
+                        <li><span style="color: #1CB698">Reducción de la vida útil</span> de los vehículos y afectación en la planificación financiera y <span style="color: #1CB698">competitividad</span> de la empresa.</li>
+                    </ul>
+                    
+                    <div class="conectori">
+                        <div class="circuloi"></div>
+                    </div>
+                </div>
+                <div class="item izq">
+                    <h4>Solución</h4>
+                    <ul style="list-style-type: disc; margin-left: 20px; font-size: 0.9em;">
+                        <ul style="list-style-type: disc; margin-left: 20px; font-size: 0.9em;">
+                            <li>Se implementó una solución que <span style="color: #1CB698">centraliza</span> la información de <span style="color: #1CB698">kilometraje</span> de los buses, utilizando una ETL para integrar datos de <span style="color: #1CB698">telemetría</span> en una nueva <span style="color: #1CB698">base de datos</span>.</li>
+                            <li>Se unen diversas <span style="color: #1CB698">fuentes de datos</span> para obtener un resumen detallado de la <span style="color: #1CB698">flota</span>, permitiendo <span style="color: #1CB698">identificar movimientos</span>, <span style="color: #1CB698">asignarlos a contratos</span> y <span style="color: #1CB698">detectar posibles errores</span>.</li>
+                            <li>Utilizando <span style="color: #1CB698">Python</span>, <span style="color: #1CB698">SQL</span> y <span style="color: #1CB698">DBT</span>, se realizó la <span style="color: #1CB698">ETL</span> y <span style="color: #1CB698">Power BI</span> para las visualizaciones.</li>
+                        </ul>
+                    </ul>
+                    
+                    <div class="conectori">
+                        <div class="circuloi"></div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- FOOTER -->
-    <footer>
-        <a href="index.html#inicio" class="arriba">
-            <i class="fa-solid fa-angles-up"></i>
-        </a>
-        <div class="redes">
-            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-            <a href="#"><i class="fa-brands fa-skype"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="#"><i class="fa-solid fa-rss"></i></a>
-        </div>
-    </footer>
-</body>
-</html>
