--- a/pages/experiencia.html
+++ b/pages/experiencia.html
@@ -35,23 +35,22 @@
                 <div class="item izq">
                     <h4>Problema</h4>
                     <ul style="list-style-type: disc; margin-left: 20px; font-size: 0.9em;">
-                        <li>Falta de un sistema <span style="color: #1CB698">centralizado</span>, <span style="color: #1CB698">automatizado</span> y <span style="color: #1CB698">confiable</span> de registro de kilometraje en Buses Hualpén.</li>
+                        <li>Falta de un sistema <span style="color: #FF0000">centralizado</span>, <span style="color: #FF0000">automatizado</span> y <span style="color: #FF0000">confiable</span> de registro de kilometraje.</li>
                     </ul>
                     <div class="conectori">
                         <div class="circuloi"></div>
                     </div>
                 </div>
                 <div class="item izq">
-                    <h4>Impacto</h4>
+                    <h4>Impacto negativo</h4>
                     <ul style="list-style-type: disc; margin-left: 20px; font-size: 0.9em;">
-                        <li><span style="color: #1CB698">Pérdida de control</span> y trazabilidad de la flota.</li>
-                        <li><span style="color: #1CB698">Costeo de contratos</span> para los clientes afectado.</li>
-                        <li><span style="color: #1CB698">Pérdida en la eficiencia operativa</span> y mayores costos.</li>
-                        <li>Dificultad en la toma de decisiones informadas y eficiencia del combustible <span style="color: #1CB698">afectada</span>.</li>
+                        <li><span style="color: #FF0000">Pérdida de control</span> y trazabilidad de la flota.</li>
+                        <li><span style="color: #FF0000">Costeo de contratos</span> para los clientes afectado.</li>
+                        <li><span style="color: #FF0000">Pérdida en la eficiencia operativa</span> y mayores costos.</li>
+                        <li>Dificultad en la toma de decisiones informadas y eficiencia del combustible <span style="color: #FF0000">afectada</span>.</li>
                         <li>Problemas de cumplimiento normativo con posibles sanciones y multas.</li>
-                        <li><span style="color: #1CB698">Reducción de la vida útil</span> de los vehículos y afectación en la planificación financiera y <span style="color: #1CB698">competitividad</span> de la empresa.</li>
+                        <li><span style="color: #FF0000">Reducción de la vida útil</span> de los vehículos y afectación en la planificación financiera y <span style="color: #FF0000">competitividad</span> de la empresa.</li>
                     </ul>
-                    
                     <div class="conectori">
                         <div class="circuloi"></div>
                     </div>
@@ -65,13 +64,59 @@
                             <li>Utilizando <span style="color: #1CB698">Python</span>, <span style="color: #1CB698">SQL</span> y <span style="color: #1CB698">DBT</span>, se realizó la <span style="color: #1CB698">ETL</span> y <span style="color: #1CB698">Power BI</span> para las visualizaciones.</li>
                         </ul>
                     </ul>
-                    
                     <div class="conectori">
                         <div class="circuloi"></div>
                     </div>
+                </div>
+
+                <div class="item izq">
+                    <h4>Beneficios</h4>
+                    <ul style="list-style-type: disc; margin-left: 20px; font-size: 0.9em;">
+                        <ul style="list-style-type: disc; margin-left: 20px; font-size: 0.9em;">
+                            <li>Mejorar el control y trazabilidad de la flota.</li>
+                            <li>Optimizar el <span style="color: #1CB698;">costeo de contratos</span> y la eficiencia operativa.</li>
+                            <li>Facilitar la <span style="color: #1CB698;">toma de decisiones informadas</span>.</li>
+                            <li>Cumplir con <span style="color: #1CB698;">normativas</span> evitando sanciones.</li>
+                            <li>Aumentar la <span style="color: #1CB698;">vida útil de los vehículos</span> y mejorar la planificación financiera.</li>
+                            <li>Incrementar así la <span style="color: #1CB698;">competitividad de la empresa</span>.</li>
+                        </ul>
+
+                        </ul>
+                    </ul>
+                    <div class="conectori">
+                        <div class="circuloi"></div>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col derecha">
+                <h3>Imágenes relacionadas</h3>
+                <div class="item der">
+                    <h4></h4>
+                    <a href="#Problema">
+                        <div class="imagen">
+                            <img src="img/ciencia-de-datos-2.jpg" alt="Descripción de la imagen">
+                        </div>
+                    </a>
+                </div>
+                <div class="item der">
+                    <h4></h4>
+                    <a href="#Impacto">
+                        <div class="imagen">
+                            <img src="img/ciencia-de-datos-2.jpg" alt="Descripción de la imagen">
+                        </div>
+                    </a>
+                </div>
+                <div class="item der">
+                    <h4></h4>
+                    <a href="#Solucion">
+                        <div class="imagen">
+                            <img src="img/ciencia-de-datos-2.jpg" alt="Descripción de la imagen">
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
