--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             </div>
             <nav id="nav">
                 <ul>
-                    <li><a href="#inicio" onclick="seleccionar()">INICIO</a></li>
-                    <li><a href="#sobremi" onclick="seleccionar()">SOBRE MI</a></li>
+                    <li><a href="#inicio" onclick="seleccionar()">START</a></li>
+                    <li><a href="#sobremi" onclick="seleccionar()">ABOUT ME</a></li>
                     <li><a href="#skills" onclick="seleccionar()">SKILLS</a></li>
                     <li><a href="#curriculum" onclick="seleccionar()">CURRICULUM</a></li>
                     <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
-                    <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
+                    <li><a href="#contacto" onclick="seleccionar()">CONTACT</a></li>
                 </ul>
             </nav>
             <div class="nav-responsive" onclick="mostrarOcultarMenu()">
@@ -49,7 +49,7 @@
     <!-- SECCION SOBRE MI -->
     <section id="sobremi" class="sobremi">
         <div class="contenido-seccion">
-            <h2>Sobre Mí</h2>
+            <h2>About Me</h2>
             <p>Hello! I'm Pablo Jerez, an Industrial Engineer specialized in transforming complex data into valuable <span style="color: #1CB698;">insights</span>. With 2 years of experience, I have developed skills in <span style="color: #1CB698;">data analysis</span>, <span style="color: #1CB698;">Python programming</span>, and <span style="color: #1CB698;">SQL database management</span>. I have worked on <span style="color: #1CB698;">Data Science</span> projects, including a notable one in <span style="color: #1CB698;">ETL</span> and <span style="color: #1CB698;">Data Visualization</span>, where <span style="color: #1CB698;">storytelling</span> was key to achieving significant impact within the organization. I am an <span style="color: #1CB698;">analytical</span> person focused on <span style="color: #1CB698;">problem-solving</span>, dedicated to understanding <span style="color: #1CB698;">business needs</span>. My current goals are to further develop my skills in <span style="color: #1CB698;">Data Science</span> and collaborate on projects that make a considerable <span style="color: #1CB698;">impact</span>. Feel free to contact me to learn more about my work!</p>
 
 
@@ -57,15 +57,15 @@
             <div class="fila">
                 <!-- datos personales -->
                 <div class="col">
-                    <h3>Datos Personales</h3>
+                    <h3>Personal Information</h3>
                     <ul>
                         <li>
-                            <strong>Cumpleaños</strong>
+                            <strong>Birthday</strong>
                             07-02-1998
                         </li>
                         <li>
-                            <strong>Teléfono</strong>
-                            +569 52302919
+                            <strong>Phone</strong>
+                            +356 99600418
                         </li>
                         <li>
                             <strong>Email</strong>
@@ -80,7 +80,7 @@
                             Swieqi, Malta
                         </li>
                         <li>
-                            <strong>Perfil</strong>
+                            <strong>Profile</strong>
                             <span>Data Analyst</span>
                         </li>
                     </ul>
@@ -88,34 +88,34 @@
 
                 <!-- intereses -->
                 <div class="col">
-                    <h3>Intereses</h3>
+                    <h3>Interests</h3>
                     <div class="contenedor-intereses">
                         <div class="interes">
                             <i class="fa-solid fa-gamepad"></i>
-                            <span>JUEGOS</span>
+                            <span>GAMES</span>
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-headphones"></i>
-                            <span>MUSICA</span>
+                            <span>MUSIC</span>
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-plane"></i>
-                            <span>VIAJAR</span>
+                            <span>TRAVEL</span>
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-person-hiking"></i>
-                            <span>DEPORTE</span>
+                            <span>SPORT</span>
                         </div>
                         <div class="interes">
                             <i class="fa-solid fa-book"></i>
-                            <span>LIBROS</span>
+                            <span>BOOKS</span>
                         </div>
                         
                     </div>
                 </div>
             </div>
             <button>
-                Descargar CV <i class="fa-solid fa-download"></i>
+                Download CV <i class="fa-solid fa-download"></i>
                 <span class="overlay"></span>
             </button>
         </div>
@@ -133,7 +133,7 @@
                         <span>SQL</span>
                         <div class="barra-skill">
                             <div class="progreso sql">
-                                <span>70%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                         <span>Python</span>
                         <div class="barra-skill">
                             <div class="progreso python">
-                                <span>70%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                         <span>Power BI</span>
                         <div class="barra-skill">
                             <div class="progreso powerbi">
-                                <span>40%</span>
+                                <span>50%</span>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                         <span>Git</span>
                         <div class="barra-skill">
                             <div class="progreso git">
-                                <span>40%</span>
+                                <span>50%</span>
                             </div>
                         </div>
                     </div>
@@ -176,8 +176,8 @@
                     <div class="item izq">
                         <h4>English School</h4>
                         <span class="casa">Gateway School of English</span>
-                        <span class="fecha">2024 - Actualidad</span>
-                        <p>Formación teórico - práctica para el idioma de inglés. </p>
+                        <span class="fecha">2024 - Currently</span>
+                        <p>Practical and Theoretical Training in the English Language.</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -186,19 +186,19 @@
 
                     
                     <div class="item izq">
-                        <h4>Diplomado Data Science</h4>
+                        <h4>Diploma Data Science</h4>
                         <span class="casa">Universidad del Desarrollo</span>
                         <span class="fecha">2022 - 2023</span>
-                        <p>Formación en conceptos claves de la Ciencia de Datos, con un enfoque Data - Driven para la resolución de problemas.</p>
+                        <p>Training in Key Concepts of Data Science, with a Data-Driven Approach to Problem Solving.</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
                     </div>
                     <div class="item izq">
-                        <h4>Ingeniería Civil Industrial</h4>
+                        <h4>Civil Industrial Engineering</h4>
                         <span class="casa">Universidad de Concepción</span>
                         <span class="fecha">2016 - 2022</span>
-                        <p>Formación sólida en ciencias de la ingeniería industrial, desarrollo de habilidades fundamentales para afrontar el mundo empresarial. </p>
+                        <p>Solid Training in Industrial Engineering Sciences, Developing Fundamental Skills for the Business World. </p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -207,23 +207,23 @@
                 </div>
 
                 <div class="col derecha">
-                    <h3>Experiencia Profesional</h3>
+                    <h3>Professional Experience</h3>
                     <div class="item der">
-                        <h4>Ingeniero Control Operacional</h4>
+                        <h4> Operational Excellence Engineer</h4>
                         <span class="casa">Buses Hualpen,<br> 
-                            Empresa Transporte Privado</span>
+                            Private Transport Company</span>
                         <span class="fecha">2023-2024</span>
-                        <p>Liderazgo de proyectos de kilometraje ligados principalmente a la eficiencia operacional y financiera. </p>
+                        <p>Project Leadership in Mileage Projects, Primarily Focused on Operational and Financial Efficiency. </p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
                     <div class="item der">
-                        <h4>Ingeniero i+D</h4>
+                        <h4>R&D Engineer</h4>
                         <span class="casa">Buses Hualpen,<br>
-                            Empresa Transporte Privado</span>
+                            Private Transport Company</span>
                         <span class="fecha">2022 - 2023</span>
-                        <p> Desarrollo de iniciativas de kilometraje a nivel compañía ligadas a la generación, automatización y disponibilización del dato.</p>
+                        <p> Development of Company-Wide Mileage Initiatives Linked to Data Generation, Automation, and Accessibility.</p>
                         <p style="text-indent: 25px;"></p>
                         <div class="conectord">
                             <div class="circulod"></div>
@@ -244,7 +244,7 @@
                     <a href="pages/experiencia.html">
                         <img src="img/trabajo (2).jpg" alt="">
                         <div class="overlay">
-                            <h3>Experiencia Profesional</h3>
+                            <h3>Professional Experience</h3>
                             <p>SQL,Python,Power BI</p>
                         </div>
                     </a>
@@ -253,7 +253,7 @@
                     <a href="pages/investigacion.html">
                         <img src="img/research (1).jpg" alt="">
                         <div class="overlay">
-                            <h3>Investigación MT</h3>
+                            <h3>Research for Bachelor's Thesis</h3>
                             <p>Python, Qgis, Simulación, Optimización</p>
                         </div>
                     </a>
@@ -262,7 +262,7 @@
                     <a href="pages/Proyectos_personales.html">
                         <img src="img/proyecto_personal.jpg" alt="">
                         <div class="overlay">
-                            <h3>Proyectos Personales</h3>
+                            <h3>Personal Proyects</h3>
                             <p>SQL,Python,Power BI</p>
                         </div>
                     </a>
@@ -275,15 +275,15 @@
     <!-- SECCION CONTACTO -->
     <section id="contacto" class="contacto">
         <div class="contenido-seccion">
-            <h2>CONTACTO</h2>
+            <h2>CONTACT</h2>
             <div class="fila">
                 <!-- Formulario -->
                 <div class="col">
-                    <input type="text" placeholder="Tú Nombre">
-                    <input type="text" placeholder="Número telefónico">
-                    <input type="text" placeholder="Dirección de correo">
-                    <input type="text" placeholder="Tema">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensaje"></textarea>
+                    <input type="text" placeholder="Your name">
+                    <input type="text" placeholder="Phone number">
+                    <input type="text" placeholder="Email address">
+                    <input type="text" placeholder="Subject">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
                     <button>
                         Enviar Mensaje<i class="fa-solid fa-paper-plane"></i>
                         <span class="overlay"></span>
