--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                     <input type="text" placeholder="Subject">
                     <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
                     <button>
-                        Enviar Mensaje<i class="fa-solid fa-paper-plane"></i>
+                        Send Message<i class="fa-solid fa-paper-plane"></i>
                         <span class="overlay"></span>
                     </button>
                 </div>
