--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <h2>PORTFOLIO</h2>
             <div class="galeria">
                 <div class="proyecto">
-                    <a href="pages/experiencia.html">
+                    <a href="pages/progreso.html">
                         <img src="img/trabajo (2).jpg" alt="">
                         <div class="overlay">
                             <h3>Professional Experience</h3>
@@ -250,7 +250,7 @@
                     </a>
                 </div>
                 <div class="proyecto">
-                    <a href="pages/investigacion.html">
+                    <a href="pages/progreso.html">
                         <img src="img/research (1).jpg" alt="">
                         <div class="overlay">
                             <h3>Research for Bachelor's Thesis</h3>
@@ -259,7 +259,7 @@
                     </a>
                 </div>
                 <div class="proyecto">
-                    <a href="pages/Proyectos_personales.html">
+                    <a href="pages/progreso.html">
                         <img src="img/proyecto_personal.jpg" alt="">
                         <div class="overlay">
                             <h3>Personal Proyects</h3>
