--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <h2>Curriculum</h2>
             <div class="fila">
                 <div class="col izquierda">
-                    <h3>Educación</h3>
+                    <h3>Education</h3>
                     <div class="item izq">
                         <h4>English School</h4>
                         <span class="casa">Gateway School of English</span>
